--- a/main-page/main.html
+++ b/main-page/main.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>note App</title>
-    <link rel="stylesheet" href="/main-page/main.css">
+    <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
-    <h1>note</h1>
+    <h1 class="logo">note</h1>
+
+    <input type="text" class="search">
+    <button type="submit">검색</button>
 
     <script src="/app.js"></script>
 </body>
